[package]
name = "csci211-project-two"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "projecttwo"
path = "src/main.rs"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "mysql",
    "macros",
    "chrono",
] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
